[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "termitone"
version = "0.1.0"
description = "Terminal-based guitar tuner"
authors = [
  { name = "Alex H", email = "Kaffekod@gmail.com" }
]
maintainers = [
  { name = "Kaffekod", email = "Kaffekod@gmail.com" }
]
requires-python = ">=3.7"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
keywords = ["guitar", "tuner", "cli", "audio", "terminal"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 or later",
  "Operating System :: OS Independent",
  "Environment :: Console",
  "Topic :: Multimedia :: Sound/Audio :: Analysis"
]
dependencies = [
  "numpy",
  "aubio",
  "sounddevice"
]
homepage = "https://github.com/Kaffekod/Termitone"
repository = "https://github.com/Kaffekod/Termitone"

[project.scripts]
termitone = "termitone:main"

[tool.setuptools]
py-modules = ["termitone", "termitone_cfg"]

